# notion-tools

./: pyproject.toml
src/: notion_tools.py
