[tool.poetry]
name = "notion-tools"
version = "0.1.2"
description = "Python and pandas helpers for Notion"
authors = ["Patch Biosciences, Inc. <contact@patch.bio>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">= 3.8, <4"
notion-client = ">= 1.0"
pandas = ">= 1.4"
numpy = ">= 1.22"

[tool.poetry.dev-dependencies]
pytest = ">= 6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
